--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,17 @@
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.5.1'
+    }
+
+    repositories {
+        mavenCentral()
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = "com.inkchild.l2nsoft.greenhour.Main"
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -11,7 +24,7 @@ sourceCompatibility = '1.8'
 // prefer. In this case NetBeans will not add these tasks but you may rely on
 // your own implementation.
 if (!hasProperty('mainClass')) {
-    ext.mainClass = 'com.inkchild.gradle'
+    ext.mainClass = 'com.inkchild.l2nsoft.greenhour.Main'
 }
 
 repositories {
@@ -42,4 +55,67 @@ dependencies {
     // https://mvnrepository.com/artifact/com.ning/async-http-client
     compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.0.11'
 
+}
+
+apply plugin: 'javafx-gradle-plugin'
+
+// configure javafx-gradle-plugin
+jfx {
+    verbose = true
+    mainClass = "com.inkchild.l2nsoft.greenhour.Main"
+    jfxAppOutputDir = "build/jfx/app"
+    jfxMainAppJarName = "green-hour.jar"
+    deployDir = "src/main/deploy"
+
+    // gradle jfxJar
+    css2bin = false
+    preLoader = null
+    updateExistingJar = false
+    allPermissions = false
+    manifestAttributes = null // Map<String, String>
+    addPackagerJar = true
+
+    // gradle jfxNative
+    identifier = null // setting this for windows-bundlers makes it possible to generate upgradeable installers (using same GUID)
+    vendor = "L2NSoft"
+    nativeOutputDir = "build/jfx/native"
+    bundler = "ALL" // set this to some specific, if your don't want all bundlers running, examples "windows.app", "jnlp", ...
+    jvmProperties = null // Map<String, String>
+    jvmArgs = null // List<String>
+    userJvmArgs = null // Map<String, String>
+    launcherArguments = null // List<String>
+    nativeReleaseVersion = "1.0"
+    needShortcut = false
+    needMenu = false
+    bundleArguments = [
+        // dont bundle JRE (not recommended, but increases build-size/-speed)
+        runtime: null
+    ]
+    appName = "Green Hour" // this is used for files below "src/main/deploy", e.g. "src/main/deploy/windows/project.ico"
+    additionalAppResources = null // path to some additional resources when creating application-bundle
+    //secondaryLaunchers = [[appName:"somethingDifferent"], [appName:"somethingDifferent2"]]
+    fileAssociations = null // List<Map<String, Object>>
+    noBlobSigning = false // when using bundler "jnlp", you can choose to NOT use blob signing
+    customBundlers // List<String>
+    skipNativeLauncherWorkaround205 = false
+
+    skipNativeLauncherWorkaround124 = false
+    skipNativeLauncherWorkaround167 = false
+    skipJNLPRessourcePathWorkaround182 = false
+    skipSigningJarFilesJNLP185 = false
+    skipSizeRecalculationForJNLP185 = false
+
+    // gradle jfxGenerateKeyStore
+    keyStore = "src/main/deploy/keystore.jks"
+    keyStoreAlias = "myalias"
+    keyStorePassword = "password"
+    keyPassword = null // will default to keyStorePassword
+    keyStoreType = "jks"
+    overwriteKeyStore = false
+
+    certDomain = null // required
+    certOrgUnit = null // defaults to "none"
+    certOrg = null // required
+    certState = null // required
+    certCountry = null // required
 }
